💄 Fix card width on tablet resolution

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -75,7 +75,7 @@ body {
 
 @media screen and (max-width: 1023px) {
   .card {
-    width: 480px;
+    width: 600px;
   }
 }
 
